# storage/api-docs/api-docs.json
@@ -10,7 +10,7 @@
     },
     "servers": [
         {
-            "url": "http://127.0.0.1:8000/api/",
+            "url": "http://memory-cards.ru/api/",
             "description": "Demo API Server"
         }
     ],
@@ -87,14 +87,41 @@
                     }
                 },
                 "responses": {
+                    "200": {
+                        "description": "Created",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/CardRequest"
+                                }
+                            }
+                        }
+                    },
                     "201": {
-                        "description": "Created"
+                        "description": "Created",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/CardRequest"
+                                }
+                            }
+                        }
                     },
                     "401": {
                         "description": "Unauthenticated"
                     },
                     "404": {
                         "description": "Not Found"
+                    },
+                    "422": {
+                        "description": "Unprocessable Entity",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/CollectionRequest"
+                                }
+                            }
+                        }
                     }
                 },
                 "security": [
@@ -239,13 +266,30 @@
                 },
                 "responses": {
                     "200": {
-                        "description": "Updated"
+                        "description": "Updated",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/CardRequest"
+                                }
+                            }
+                        }
                     },
                     "401": {
                         "description": "Unauthenticated"
                     },
                     "404": {
                         "description": "Not Found"
+                    },
+                    "422": {
+                        "description": "Unprocessable Entity",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/CollectionRequest"
+                                }
+                            }
+                        }
                     }
                 },
                 "security": [
@@ -305,6 +349,26 @@
                     }
                 },
                 "responses": {
+                    "200": {
+                        "description": "",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/CollectionRequest"
+                                }
+                            }
+                        }
+                    },
+                    "422": {
+                        "description": "Unprocessable Entity",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/CollectionRequest"
+                                }
+                            }
+                        }
+                    },
                     "201": {
                         "description": "Created"
                     },
@@ -427,10 +491,27 @@
                 },
                 "responses": {
                     "200": {
-                        "description": "Updated"
+                        "description": "Updated",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Collection"
+                                }
+                            }
+                        }
                     },
                     "401": {
                         "description": "Unauthenticated"
+                    },
+                    "422": {
+                        "description": "Unprocessable Entity",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/CollectionRequest"
+                                }
+                            }
+                        }
                     },
                     "404": {
                         "description": "Not Found"
@@ -558,6 +639,12 @@
                         "description": "Name of the colelction",
                         "type": "string",
                         "example": "Example Name"
+                    },
+                    "collection_path": {
+                        "title": "collection_path",
+                        "description": "Path to the colelction/automaicly generate",
+                        "type": "string",
+                        "example": "ExamplePath"
                     },
                     "collection_description": {
                         "title": "collection_description",
